# Outpeer-Management-System

./: .dockerignore  .python-version  Dockerfile  backup.json  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
courses/: models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py
lesson/: models.py  permissions.py  serializers.py  urls.py  views.py
lesson/migrations/: 0001_initial.py  0002_rename_deadline_lesson_hw_deadline_and_more.py  0003_remove_lesson_hw_timer_alter_lesson_lesson_name.py  0004_alter_lesson_lesson_name_and_more.py
templates/: base.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: home.html  register.html  users_list.html
